Version: 1.4 change slide panel to be above footer, fix jumping icons on mobile

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Osada Fabryczna
 Text Domain: osadafabryczna
 Author: Aleksandra Osińska
 Description: Custom theme for Osada Fabryczna heritage map
-Version: 1.3
+Version: 1.4
 */
 
 /* ---------------------------
@@ -146,7 +146,7 @@ main {
 @media (max-width: 767px) {
 
   #slide-panel {
-    bottom: 0;
+    bottom: 44px;
     left: 0;
     width: 100%;
     height: clamp(260px, 46vh, 360px);
@@ -156,7 +156,7 @@ main {
     border-top-left-radius: 18px;
     border-top-right-radius: 18px;
 
-    transform: translateY(100%);
+    transform: translateY(calc(100% + 44px));
   }
 
   #slide-panel.open {
@@ -407,6 +407,11 @@ body.front-page .site-footer {
     background: transparent;
     border-top-color: transparent;
     z-index: 1000;
+}
+
+body.map-panel-open.home .site-footer,
+body.map-panel-open.front-page .site-footer {
+    background: #fff;
 }
 
 @media (min-width: 768px) {
